--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <form class="range-form">
+    <form class="user-form">
       <header><h1>Random Number Game</h1></header>
       <h2>
         Generate a number between 0 and
@@ -22,7 +22,8 @@
         /><button>play!</button>
       </h2>
     </form>
-    <h2></h2>
+    <h2 class="score"></h2>
+    <h2 class="result"></h2>
     <script src="index.js"></script>
   </body>
 </html>
