For theme-colors image update
For theme-colors image update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <header id="clock">00:00:00</header>
     <form class="login-form hidden">
+      <label for="name">What is your color?</label>
       <input
+        id="name"
         placeholder="What is your name?"
         type="text"
         required
