--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,17 +15,19 @@
   </head>
   <body>
     <header id="clock">00:00:00</header>
-    <form class="login-form hidden">
-      <label for="name">What is your color?</label>
+    <label for="name">What is your color?</label>
+    <form class="login-form">
       <input
         id="name"
+        autofocus
         placeholder="What is your name?"
         type="text"
         required
         maxlength="15"
       />
-      <button>Log in</button>
+      <button class="hidden">Log in</button>
     </form>
+
     <span></span>
     <form class="todo-form hidden">
       <input type="text" required placeholder="Wrtie your to do" />
