from color to star
from color to star

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header id="clock">00:00:00</header>
-    <label for="name">What is your color?</label>
+    <label for="name">What is your star?</label>
     <form class="login-form">
       <input
         id="name"
